--- a/_posts/2014-12-2-NN.md
+++ b/_posts/2014-12-2-NN.md
@@ -233,4 +233,4 @@ Here is the R code for the neural network. This model include two hidden layers 
 
 
 
-[101]:tikz12.png "NN"
+[101]:/figure/source/2014-12-2-NN/tikz12.png "NN"
