--- a/_posts/2014-12-2-NN.md
+++ b/_posts/2014-12-2-NN.md
@@ -68,7 +68,7 @@ $$
 
 Here is structure of one hidden layer  Neural Network(with 15 unit in the hidden layer):
 
-![NN graph][101]
+![NN graph](/figure/source/2014-12-2-NN/tikz12.png) 
 
 #### Cost Function
 
